--- a/code/PI_PICO_CURRENT_NODE_LORA/platformio.ini
+++ b/code/PI_PICO_CURRENT_NODE_LORA/platformio.ini
@@ -13,3 +13,6 @@ platform = raspberrypi
 board = pico
 framework = arduino
 monitor_speed = 115200
+lib_deps = 
+    adafruit/Adafruit ADS1X15@^2.4.2
+    sandeepmistry/LoRa@^0.8.0
